# multicanister

./: .dockerignore  .env  .eslintrc.json  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Hackatone.md  LICENSE  README.md  apps.json  canister_ids.json  core.json  dfx.json  docker-compose.yml  eslint.config.js  fetch_sns_canisters.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  sns_init.yaml  tsconfig.json  turbo.json  users.json  ~environment.json
.github/workflows/: build-and-deploy-wasms.yaml  build-dockers.yaml  build-icr-artifacts.yaml  build-release-icr.yaml  deploy-ts.yaml
.husky/: pre-commit
canisters/factory/: Cargo.toml  can.did
canisters/factory/src/registry/: actor.rs  authorize.rs  memory_registry.rs  mod.rs  types_and_args.rs  url_decode.rs
canisters/hello/: Cargo.toml  can.did
canisters/hello/src/: actor.rs
canisters/sns/: ic-icrc1-index-ng.wasm  ic-icrc1-ledger.wasm  sns-governance-canister.wasm  sns-root-canister.wasm  sns-swap-canister.wasm
infra/cdktf/: .gitignore  cdktf.json  config.ts  main.ts  package-lock.json  package.json  ~main.ts
libs/ts/: check.sh
projects/debug/: Cargo.toml
rust-libs/storable_derive/: Cargo.toml
scripts/: sns-build.sh
typescript/: pic
typescript/_eslint-config/: library.js  package.json  react-internal.js
typescript/_prettier-config/: index.js
typescript/_typescript-config/: base-nodejs.json  package.json
typescript/eslint-config/: package.json
typescript/icr-cli/: .env  README.md  nodemon.json  package.json  sns-cli-dump-args.patch  tsconfig.json
(+378 files in other folders)
